--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -12,12 +12,15 @@
 	
 	<link href="styles/kendo.mobile.all.min.css" rel="stylesheet" type="text/css" />
 	<link href="styles/app.min.css" rel="stylesheet" type="text/css" />
-	
+    <link href="styles/jquery.pnotify.default.css" rel="stylesheet" type="text/css" />
+	<link href="styles/jquery.pnotify.default.icons.css" rel="stylesheet" type="text/css" />
+
 	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
   	
 	<script src="cordova.js" type="text/javascript"></script>
     <script src="childbrowser.js" type="text/javascript"></script>
 
+    <script src="js/jquery-ui-1.8.20.min.js" type="text/javascript"></script>
     <script src="js/underscore-min.js" type="text/javascript"></script>
 	<script src="js/jquery.base64.min.js" type="text/javascript"></script>
 	<script src="js/kendo.mobile.min.js" type="text/javascript"></script>
@@ -26,7 +29,9 @@
 	<script src="js/jquery.signalR-0.5.3.min.js" type="text/javascript"></script>
     <script src="js/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="js/signalr.hubs.min.js" type="text/javascript"></script>
+	<script src="js/jquery.pnotify.min.js" type="text/javascript"></script>
 	
+    <script src="scripts/namespaces.js" type="text/javascript"></script>
     <script src="scripts/templateLoader.js" type="text/javascript"></script>
 	<script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/applicationConstants.js" type="text/javascript"></script>
@@ -44,8 +49,18 @@
     <script src="scripts/viewmodels/settingsViewModel.js" type="text/javascript"></script>
 </head>
 <body>
-   
-        
+    <!-- Templates -->
+    <script type="text/x-kendo-template" id="tasksListTemplate">
+		<li>
+        <a data-align="left" data-bind="events:{touchend: navigateTodoDetails}">${title}</a>
+		<a data-role="detailbutton" data-style="rowdelete" data-bind="events:{click: removeTodo}"></a>
+        </li>
+	</script>
+    <script type="text/x-kendo-template" id="idpListTemplate">
+        <img src="${imageUrl}" style="border: 50px; width: 60px" align="middle"/>
+        <a onclick="acsViewModel.openAuthWindow('${loginUrl}')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${name}</a>
+	</script> 
+
     <!-- Start page -->
 	<div id="startPage" data-role="view" data-title="TODOs" data-model="startViewModel" data-layout="defaultLayout">
 		<header data-role="header">
@@ -58,7 +73,7 @@
 	</div>
 
     <!-- ACS Login page -->
-    <div id="acsLogin" data-role="view" data-title="Login" data-model="acsViewModel" data-show="acsLoginShow" data-layout="defaultLayout">
+    <div id="acsLogin" data-role="view" data-title="Login" data-model="acsViewModel" data-show="todosApp.Views.acsLoginShow" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
@@ -73,12 +88,13 @@
 	</div>
 
 	<!-- TODOs page -->
-	<div id="todosPage" data-role="view" data-title="TODOs" data-model="todosViewModel" data-init="todosPageInit" data-before-show="beforePageShow" data-layout="defaultLayout">
+	<div id="todosPage" data-role="view" data-title="TODOs" data-model="todosViewModel" data-init="todosApp.Views.todosPageInit" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
 				<a data-align="right" data-role="button" class="nav-button" data-icon="add" data-bind="click: navigateAddTodo"></a>
-				<a data-align="left" data-role="button" class="nav-button" data-icon="refresh" data-bind="click: loadTodos"></a>
+			    <a data-align="left" data-role="button" class="nav-button" data-icon="refresh" data-bind="click: loadTodos"></a>
+                <a data-align="left" data-role="button" class="nav-button" data-icon="fastforward" data-click="dataservices.sync"></a>
 			</div>
 		</header>
 		
@@ -90,7 +106,7 @@
 	</div>
 
 	<!-- TODO details page -->
-	<div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-before-show="beforePageShow" data-layout="defaultLayout">
+	<div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<a data-role="backbutton" data-align="left">Back</a>
@@ -124,7 +140,7 @@
 	</div>
 	
     <!-- Add TODO page -->
-    <div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-init="addTodoPageInit" data-show="addTodoPageShow" data-before-show="beforePageShow" data-layout="defaultLayout">
+    <div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-init="todosApp.Views.addTodoPageInit" data-show="todosApp.Views.addTodoPageShow" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
         <header data-role="header">
             <div data-role="navbar">
                 <a data-role="backbutton" data-align="left">Back</a>
@@ -190,11 +206,11 @@
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.2.3 (2012-10-09.2)
+				Version 0.2.3 (2012-10-12.1)
 				<img data-align="right" alt="TODOs" src="images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-09.2)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-12.1)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
