--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -12,11 +12,11 @@
 	
 	<link href="styles/kendo.mobile.all.min.css" rel="stylesheet" type="text/css" />
 	<link href="styles/app.min.css" rel="stylesheet" type="text/css" />
-    <link href="styles/jquery.pnotify.default.css" rel="stylesheet" type="text/css" />
-	<link href="styles/jquery.pnotify.default.icons.css" rel="stylesheet" type="text/css" />
+    <link href="styles/jquery_notification.css" rel="stylesheet" type="text/css" />
 
 	<script src="js/jquery-1.7.1.min.js" type="text/javascript"></script>
-  	
+    <script src="js/jquery-ajax-retry.js" type="text/javascript"></script>
+
 	<script src="cordova.js" type="text/javascript"></script>
     <script src="childbrowser.js" type="text/javascript"></script>
 
@@ -29,15 +29,15 @@
 	<script src="js/jquery.signalR-0.5.3.min.js" type="text/javascript"></script>
     <script src="js/jquery.ba-bbq.min.js" type="text/javascript"></script>
 	<script src="js/signalr.hubs.min.js" type="text/javascript"></script>
-	<script src="js/jquery.pnotify.min.js" type="text/javascript"></script>
-	
+	<script src="js/jquery_notification_v.1.js" type="text/javascript"></script>
+
     <script src="scripts/namespaces.js" type="text/javascript"></script>
     <script src="scripts/templateLoader.js" type="text/javascript"></script>
 	<script src="scripts/app.js" type="text/javascript"></script>
     <script src="scripts/applicationConstants.js" type="text/javascript"></script>
 	<script src="scripts/views.js" type="text/javascript"></script>
     <script src="scripts/services/httpConstants.js" type="text/javascript"></script>    
-    <script src="scripts/services/notifications.js" type="text/javascript"></script>
+    <script src="scripts/services/notificationservice.js" type="text/javascript"></script>
 	<script src="scripts/services/dataservices.js" type="text/javascript"></script>
     <script src="scripts/services/pictureservice.js" type="text/javascript"></script>
     <script src="scripts/viewmodels/startViewModel.js" type="text/javascript"></script>
@@ -57,8 +57,8 @@
     <script id="idpListTemplate" type="text/x-kendo-template">
         <img src="${imageUrl}" style="border: 50px; width: 60px" align="middle"/>
         <a onclick="acsViewModel.openAuthWindow('${loginUrl}')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${name}</a>
-	</script> 
-
+	</script>
+    
     <!-- Start page -->
 	<div id="startPage" data-role="view" data-title="TODOs" data-model="startViewModel" data-layout="defaultLayout">
 		<header data-role="header">
@@ -104,7 +104,7 @@
     </div>
 
 	<!-- TODO details page -->
-	<div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-show="todosApp.Views.todoDetailsPageShow" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
+	<div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-show="todosViewModel.navigateTodoDetails" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<a data-role="backbutton" data-align="left">Back</a>
@@ -204,11 +204,11 @@
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.3 (2012-10-13.1)
+				Version 0.3.1 (2012-10-13.2)
 				<img data-align="right" alt="TODOs" src="images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-13.1)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-13.2)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
@@ -247,7 +247,7 @@
 	</div>
 
 	<!-- Error dialog -->
-    <div data-role="modalview" id="errorDialog" style="width: 85%; height: 50%;" data-model="errorViewModel">
+    <div data-role="modalview" id="errorDialog" style="width: 85%; height: 40%;" data-model="errorViewModel">
         <div data-role="header">
             <div data-role="navbar">
                 <span data-role="view-title">Error</span>
