--- a/TodoWebApp/app/index.bkp.req.html
+++ b/TodoWebApp/app/index.bkp.req.html
@@ -13,40 +13,8 @@
 	<link href="styles/kendo.mobile.all.min.css" rel="stylesheet" type="text/css" />
 	<link href="styles/app.min.css" rel="stylesheet" type="text/css" />
     <link href="styles/jquery_notification.css" rel="stylesheet" type="text/css" />
-
-	<script src="js/libs/jquery-1.7.1.min.js" type="text/javascript"></script>
-    <script src="js/libs/jquery-ajax-retry.js" type="text/javascript"></script>
-
-	<script src="cordova.js" type="text/javascript"></script>
-    <script src="childbrowser.js" type="text/javascript"></script>
-
-    <script src="js/libs/jquery-ui-1.8.20.min.js" type="text/javascript"></script>
-    <script src="js/libs/underscore-min.js" type="text/javascript"></script>
-	<script src="js/libs/jquery.base64.min.js" type="text/javascript"></script>
-	<script src="js/libs/kendo.mobile.min.js" type="text/javascript"></script>
-	<script src="js/libs/amplify.min.js" type="text/javascript"></script>
-	<script src="js/libs/notifier.min.js" type="text/javascript"></script>
-	<script src="js/libs/jquery.signalR-0.5.3.min.js" type="text/javascript"></script>
-    <script src="js/libs/jquery.ba-bbq.min.js" type="text/javascript"></script>
-	<script src="js/libs/signalr.hubs.min.js" type="text/javascript"></script>
-	<script src="js/libs/jquery_notification_v.1.js" type="text/javascript"></script>
-
-    <script src="js/namespaces.js" type="text/javascript"></script>
-    <script src="js/templateLoader.js" type="text/javascript"></script>
-	<script src="js/app.js" type="text/javascript"></script>
-    <script src="js/applicationConstants.js" type="text/javascript"></script>
-	<script src="js/views.js" type="text/javascript"></script>
-    <script src="js/services/httpConstants.js" type="text/javascript"></script>    
-    <script src="js/services/notificationservice.js" type="text/javascript"></script>
-	<script src="js/services/dataservices.js" type="text/javascript"></script>
-    <script src="js/services/pictureservice.js" type="text/javascript"></script>
-    <script src="js/viewmodels/startViewModel.js" type="text/javascript"></script>
-	<script src="js/viewmodels/authenticationViewModel.js" type="text/javascript"></script>
-	<script src="js/viewmodels/todosViewModel.js" type="text/javascript"></script>
-	<script src="js/viewmodels/newTodoItemViewModel.js" type="text/javascript"></script>
-	<script src="js/viewmodels/errorViewModel.js" type="text/javascript"></script>
-    <script src="js/viewmodels/acsViewModel.js" type="text/javascript"></script>
-    <script src="js/viewmodels/settingsViewModel.js" type="text/javascript"></script>
+    
+	<script data-main="js/main" src="js/libs/require.js"></script>
 </head>
 <body>
     <!-- Templates -->
