--- a/TodoWebApp/app/index.html
+++ b/TodoWebApp/app/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>TODOs</title>
+	<title>tUdUs</title>
 
 	<meta charset="utf-8">
 	<meta name="apple-mobile-web-app-capable" content="yes" />
@@ -33,7 +33,8 @@
 	
     <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?key=AIzaSyCG4jUolof0jhqQu0j1aNqSWfW_ms-wRKg&sensor=true"></script>
 	
-    <script src="js/namespaces.js" type="text/javascript"></script>
+	<script src="js/namespaces.js" type="text/javascript"></script>
+    <script src="js/helpers.js" type="text/javascript"></script>
     <script src="js/templateLoader.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
     <script src="js/applicationConstants.js" type="text/javascript"></script>
@@ -51,24 +52,32 @@
     <script src="js/viewmodels/settingsViewModel.js" type="text/javascript"></script>
 </head>
 <body>
-    <!-- Templates -->
+    <!-- Templates -->    
     <script id="tasksListTemplate" type="text/x-kendo-template">
-        <a class="details-link" data-role="listview-link" href="\#todoDetailsPage?id=#:id#">${title}</a>
-		<a data-role="detailbutton" data-style="rowdelete" data-bind="events:{click: removeTodo}"></a>
-    </script>    
+        # if (typeof isAdded !== 'undefined') { #
+            # if (isAdded) { #
+                <a class="details-link" style="color: darkred; font-style: italic;" data-role="listview-link" href="\#todoDetailsPage?id=#:id#">#= title#</a>
+            # } #
+        # } else { #
+            <a class="details-link" data-role="listview-link" href="\#todoDetailsPage?id=#:id#">#= title#</a>
+        # } #
+        
+	    <a data-role="detailbutton" data-style="rowdelete" data-bind="events:{click: removeTodo}"></a>
+    </script>
+
     <script id="idpListTemplate" type="text/x-kendo-template">
         <img src="${imageUrl}" style="border: 50px; width: 60px" align="middle"/>
         <a onclick="acsViewModel.openAuthWindow('${loginUrl}')">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;${name}</a>
 	</script>
 
     <!-- Start page -->
-	<div id="startPage" data-role="view" data-title="TODOs" data-model="startViewModel" data-layout="defaultLayout">
+	<div id="startPage" data-role="view" data-title="tUdUs" data-model="startViewModel" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
 			</div>
 		</header>
-        <img src="images/Wooden_Todo_256x256.png" alt="TODOs" />
+        <img src="images/Wooden_Todo_256x256.png" alt="tUdUs" />
 		<a data-role="button" id="openLoginButton" data-bind="click: openLoginView">Login</a>
 	</div>
 
@@ -87,8 +96,8 @@
 		</ul>
 	</div>
 
-	<!-- TODOs page -->
-    <div id="todosPage" data-role="view" data-title="TODOs" data-model="todosViewModel" data-init="todosApp.Views.todosPageInit" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
+	<!-- tUdUs page -->
+    <div id="todosPage" data-role="view" data-title="tUdUs" data-model="todosViewModel" data-init="todosApp.Views.todosPageInit" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
 	    <header data-role="header">
 		    <div data-role="navbar">
 			    <span data-role="view-title"></span>
@@ -105,7 +114,7 @@
 	    </ul>
     </div>
 
-	<!-- TODO details page -->
+	<!-- tUdU details page -->
 	<div id="todoDetailsPage" data-role="view" data-title="Details" data-model="todosViewModel" data-show="todosViewModel.navigateTodoDetails" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
@@ -143,8 +152,8 @@
         <br/>
 	</div>
 	
-    <!-- Add TODO page -->
-    <div id="addTodoPage" data-role="view" data-title="TODOs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-init="todosApp.Views.addTodoPageInit" data-show="todosApp.Views.addTodoPageShow" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
+    <!-- Add tUdU page -->
+    <div id="addTodoPage" data-role="view" data-title="tUdUs" data-transition="overlay:up" data-model="newTodoItemViewModel" data-init="todosApp.Views.addTodoPageInit" data-show="todosApp.Views.addTodoPageShow" data-before-show="todosApp.Views.beforePageShow" data-layout="defaultLayout">
         <header data-role="header">
             <div data-role="navbar">
                 <a data-role="backbutton" data-align="left">Back</a>
@@ -184,7 +193,7 @@
     </div>    
 
     <!-- Settings page -->
-	<div id="settingsPage" data-role="view" data-title="TODOs" data-model="settingsViewModel" data-layout="defaultLayout">
+	<div id="settingsPage" data-role="view" data-title="tUdUs" data-model="settingsViewModel" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
@@ -205,22 +214,22 @@
 	</div>
 
 	<!-- Info/About page -->
-	<div id="infoPage" data-role="view" data-title="TODOs" data-layout="defaultLayout">
+	<div id="infoPage" data-role="view" data-title="tUdUs" data-layout="defaultLayout">
 		<header data-role="header">
 			<div data-role="navbar">
 				<span data-role="view-title"></span>
 			</div>
 		</header>
 		<br />
-		<h2>About TODO Items</h2>
+		<h2>About tUdUs</h2>
 			
 		<ul data-role="listview" data-style="inset">
 			<li>
-				Version 0.3.1 (2012-10-14.1)
-				<img data-align="right" alt="TODOs" src="images/Wooden_Todo_32x32.png" style="float: right"/>
+				Version 0.4 (2012-10-15.1)
+				<img data-align="right" alt="tUdUs" src="images/Wooden_Todo_32x32.png" style="float: right"/>
 			</li>
 			<li>
-				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about TODO Items app (2012-10-14.1)" data-rel="external">Christian Weyer</a>
+				<a href="mailto:christian.weyer@thinktecture.com?Subject=Question about tUdUs app (2012-10-15.1)" data-rel="external">Christian Weyer</a>
 				<a data-role="detailbutton" data-icon="compose"></a>
 			</li>
 		</ul>      				
@@ -231,7 +240,7 @@
         <footer data-role="footer">
 			<div data-role="tabstrip">
 				<a data-icon="home" href="#startPage">Home</a>
-				<a data-icon="bookmarks" href="#todosPage">TODOs</a>
+				<a data-icon="bookmarks" href="#todosPage">Items</a>
                 <a data-icon="settings" href="#settingsPage">Settings</a>
 				<a data-icon="info" href="#infoPage">Info</a>
 			</div>
