--- a/TodoWebApp/jqm/index.html
+++ b/TodoWebApp/jqm/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html ng-app="TodoService">
     <head>
-        <title>jQM Angular Sample</title>
+        <title>tUduS</title>
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -20,7 +20,7 @@
 <!--Todo List Page-->
     <div id="todo-list" data-role="page">
         <div data-role="header">
-            <h1>Angular Todo</h1>
+            <h1>tUdUs</h1>
             <a href="#todo-detail" ng-click="newTodo()" data-icon="add" class="ui-btn-right">New</a>
         </div>
         <div data-role="content">
